--- a/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
+++ b/frontend/src/app/modules/features/employer/profile/employer-setting/employer-setting.component.html
@@ -18,37 +18,8 @@
         <h2>Account Setting</h2>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-4 col-md-6">
-        <div class=" form-group">
-          <label>User Name</label>
-          <input type="text" class="form-control" placeholder="First Name" value="YourName">
-        </div>
-        <div class="form-group">
-          <label>Password</label>
-          <input type="Password" class="form-control" value="admin@123">
-        </div>
-        <div class="form-group">
-          <label>New Password</label>
-          <input type="Password" class="form-control" placeholder="Enter New Password" >
-        </div>
-        <div class="form-group">
-          <label>Confirm Password</label>
-          <input type="Password" class="form-control" placeholder="Enter Confirm Password" >
-        </div>
-      </div>
-    </div>
-    <div class="row mt-5">
-      <div class="col-lg-4 col-md-6">
-        <div class="form-group">
-          <button type="button" class="btn btn-secondary btn-block btn-lg">Cancel</button>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="form-group">
-          <button type="button" class="btn btn-theme-blue btn-block btn-lg">Save</button>
-        </div>
-      </div>
-    </div>
+    <app-change-password [role]="'employer'">
+
+    </app-change-password>
   </div>
 </section>
